<resources>
    <string name="app_name">CoNFine</string>
    <string name="welcome">Welcome!</string>
    <string name="assesment_btn">Self-Assessment Test</string>
    <string name="warning">The information from this self assessment will be used to monitor your current health status so try to choose most accurate answer. The information will be also used for monitoring and management of current health crisis and research in our fight against corona</string>
    <string name="understand">OK, I Understand</string>
    <string name="gender_select">Choose your Gender</string>
    <string name="cough">Cough</string>
    <string name="muffled">Muffled/Change in Voice</string>
    <string name="breath">Shortness of Breath</string>
    <string name="fever">Fever</string>
    <string name="nausea">Nausea</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="sense">Loss of sense of Smell/Taste</string>
    <string name="none">None</string>
    <string name="diabetes">Diabetes</string>
    <string name="hyper">Hypertension</string>
    <string name="lungs">Any kind of Lung Disease</string>
    <string name="heart">Any kind of Heart Disease</string>
    <string name="kidney">Kidney Disorders</string>
    <string name="blood">Blood Disorders</string>
    <string name="immune">Immunodeficiency</string>
    <string name="contact1">"I have recently come in  contact/ lived with a person tested positive for corona "</string>
    <string name="contact2">I am a health worker and have  examined a COVID positive  patient without protective gear</string>
    <string name="less_5">Less than 5 days</string>
    <string name="more_5">More than 5 days</string>
    <string name="more_14">More tha 14 days</string>
    <string name="next">Next</string>
    <string name="pregnant">Are you Expecting a child?</string>
    <string name="smoke">Do you Smoke?</string>
    <string name="symptoms">Do you have any of the following Symptoms?</string>
    <string name="travel">Have you travelled in the last 28–45 days?</string>
    <string name="contact_days">Please specify, you have come in contact in</string>
    <string name="logo">logo</string>
    <string name="skip">If None, Click Next</string>
    <string name="liver">Liver Disorder</string>
    <string name="age">Tell us about your age</string>
    <string name="more10">10–39</string>
    <string name="more40">40–79</string>
    <string name="more80"><![CDATA[>80]]></string>
    <string name="self_assesment_test">SELF-ASSESSMENT TEST</string>
    <string name="result">RESULT</string>
    <string name="warning_result"><![CDATA[*This is based on your current health status and  the options selected by you during questionnaire  Please do consult the doctor & take their  advice in case you don’t feel good.]]></string>
    <string name="excersise_plan">Exercise Plan</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="no_risk">NO RISK</string>
    <string name="no_risk_desc">No Worries my Friend!</string>
    <string name="very_low_srisk">VERY LOW RISK</string>
    <string name="very_low_risk_desc">Just follow our Diet and Exercise plans!</string>
    <string name="low_risk">LOW RISK</string>
    <string name="mild_risk">MILD RISK</string>
    <string name="moderate_risk">MODERATE RISK</string>
    <string name="significant_risk">SIGNIFICANT RISK</string>
    <string name="significant_risk_desc">We recommend you to see a  doctor!</string>
    <string name="major_risk">MAJOR RISK</string>
    <string name="high_risk">HIGH RISK</string>
    <string name="serious_risk">SERIOUS RISK</string>
    <string name="extrme_risk">EXTREME RISK</string>
    <string name="contact_people">"Which of the following apply  to you? "</string>
    <string name="caretaker_1">How do I take care of someone who\'s quarantined in my home?</string>
    <string name="caretaker_2">✔\t Help the person who is sick follow their doctor’s instructions for care and medicine.For most people, symptoms last a few days, and people usually feel better after a week.</string>
    <string name="caretaker_3">✔\t See if over-the-counter medicines for fever help the person feel better.</string>
    <string name="caretaker_4">✔\t Make sure the person who is sick drinks a lot of fluids and rests.</string>
    <string name="caretaker_5">✔\t Help them with grocery shopping, filling prescriptions, and getting other items they may need. Consider having the items delivered through a delivery service, if possible.</string>
    <string name="caretaker_6">✔\t Take care of their pet(s), and limit contact between the person who is sick and their pet(s) when possible.</string>
    <string name="caretaker_7">✔\t Call their doctor if the person keeps getting sicker. Limit contact with the patient and do not share personal items.</string>
    <string name="caretaker_8">✔\t tClean your hands regularly.</string>
    <string name="caretaker_9">WHEN TO SEEK FOR MEDICAL HELP?</string>
    <string name="caretaker_10">If someone is showing any of these signs, seek emergency medical care immediately:</string>
    <string name="caretaker_11">✔\t Trouble breathing</string>
    <string name="caretaker_12">✔\t Persistent pain or pressure in the chest</string>
    <string name="caretaker_13">✔\t New confusion</string>
    <string name="caretaker_14">✔\t Inability to wake or stay awake</string>
    <string name="caretaker_15">✔\t Bluish lips or face</string>
    <string name="caretaker_16">⭐\t This list is not all the possible symptoms. Please call your medical provider for any other symptoms that are severe or concerning to you.</string>
    <string name="quarantine_12">✔\t Patients with confirmed COVID-19 should remain under home isolation precautions until the risk of secondary transmission to others is thought to be low. The decision to discontinue home isolation precautions is made on a case-by-case basis, in consultation with health care providers, and state and local health departments.</string>
    <string name="quarantine_11">"✔\t People who are placed under active monitoring or facilitated self-monitoring should follow instructions provided by their local health department or occupational health professionals, as appropriate. "</string>
    <string name="quarantine_10">✔\t Please contact your local or state health department as soon as possible in case of any emergency or irregularities in health</string>
    <string name="quarantine_9">✔\t Do not share dishes, drinking glasses, cups, eating utensils, towels or bedding with other people or pets in your home. After using these items, they should be washed thoroughly with soap and water.</string>
    <string name="quarantine_8">"✔\t Clean all high-touch surfaces daily which include counters, tabletops, doorknobs, bathroom fixtures, toilets, phones, keyboards, tablets, and bedside tables. "</string>
    <string name="quarantine_7">✔\t Avoid touching your eyes, nose, and mouth with unwashed hands.</string>
    <string name="quarantine_6">✔\t Wash your hands often with soap and water for at least 20 seconds or clean your hands with an alcohol-based hand sanitizer that contains 60 to 95% alcohol, covering all surfaces of your hands and rubbing them together until they feel dry.</string>
    <string name="quarantine_5">✔\t Cover your mouth and nose with a tissue when you cough or sneeze. Throw used tissues in a lined trash can.</string>
    <string name="quarantine_4">"✔\t Always wear a face mask when you are around other people (e.g., sharing a room or vehicle) or pets, and before you enter a health care provider’s office. "</string>
    <string name="quarantine_3">✔\t If you have a medical appointment, call the health care provider prior to your appointment and tell them that you have symptoms of COVID.</string>
    <string name="quarantine_2">✔\t Separate yourself from people and animals at home.</string>
    <string name="quarantine_1">✔\t Restrict activities outside your home, except for getting medical care. Under no circumstance you should go to work, school, or public areas. Avoid using public transportation, ride sharing, or taxis.</string>
    <string name="myth_1">Taking a hot bath DOES NOT prevent the coronavirus.</string>
    <string name="myth_2">Cold weather and snow CANNOT kill the CoronaVirus .</string>
    <string name="myth_4">There is NO evidence that companion animals/pets such as dogs or \t\tcats can transmit the coronavirus.</string>
    <string name="myth_3">The coronavirus CANNOT be transmitted through mosquito bites.</string>
    <string name="health_1_head">1.\tEat a brain-healthy diet to support strong mental health</string>
    <string name="health_1_body">An unhealthy diet can take a toll on your brain and mood, disrupt your sleep, sap your energy, and weaken your immune system. Conversely, switching to a wholesome diet, low in sugar and rich in healthy fats, can give you more energy, improve your sleep and mood.</string>
    <string name="health_sub_1">Foods that adversely affect mood</string>
    <string name="health_bullet_1">✔\t Caffeine</string>
    <string name="health_bullet_2">✔\t Alcohol</string>
    <string name="health_bullet_3">✔\t Trans fats or anything with “partially hydrogenated” oil</string>
    <string name="health_bullet_4">✔\t Foods with high levels of chemical preservatives or hormones</string>
    <string name="health_bullet_5">✔\t Sugary snacks</string>
    <string name="health_bullet_6">✔\t Refined carbs such as white rice or white flour</string>
    <string name="health_bullet_7">✔\t Fried food</string>
    <string name="health_sub_2">Foods that boost mood</string>
    <string name="health_bullet_8">✔\t Fatty fish rich in Omega-3s such as salmon, herring, mackerel, anchovies, sardines, tuna</string>
    <string name="health_bullet_9">✔\t Nuts such as walnuts, almonds, cashews, peanuts</string>
    <string name="health_bullet_10">✔\t Avocados</string>
    <string name="health_bullet_11">✔\t Flaxseed</string>
    <string name="health_bullet_12">✔\t Beans</string>
    <string name="health_bullet_13">✔\t Leafy greens such as spinach, kale, Brussel’s sprouts</string>
    <string name="health_bullet_14">✔\t Fresh fruit such as blueberries</string>
    <string name="health_2_head">2.Manage emotions to relieve stress:</string>
    <string name="health_2_body">"✔\t Understanding and accepting your emotions—especially those unpleasant ones many of us try to ignore—can make a huge difference in your ability to manage stress and balance your moods. "</string>
    <string name="health_3_head">3.Talk about your feelings:</string>
    <string name="health_3_body">✔\t Talking about your feelings can help you stay in good mental health and deal with times when you feel troubled.</string>
    <string name="health_4_head">4.Drink sensibly:</string>
    <string name="health_4_body">✔\t We often drink alcohol to change our mood. Some people drink to deal with fear or loneliness, but the effect is only temporary.When the drink wears off, you feel worse. Drinking is not a good way to manage difficult feelings.</string>
    <string name="health_5_head">5.Do something you’re good at:</string>
    <string name="health_5_body">✔\t What do you love doing? What activities can you lose yourself in? What did you love doing in the past? Enjoying yourself can help beat stress </string>
    <string name="health_6_head">6.Accept who you are:</string>
    <string name="health_6_body">✔\t We’re all different. It’s much healthier to accept that you’re unique than to wish you were more like someone else. Feeling good about yourself boosts your confidence.</string>
    <string name="health_7_head">7. Ask for help:</string>
    <string name="health_7_body">✔\t No one is a superhuman. We all sometimes get tired or overwhelmed by how we feel or when things don’t go to plan. If things are getting too much for you and you feel you can’t cope, ask for help from your family or friends.</string>
</resources>