<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentalHealthActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="30dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="40dp"
                        android:paddingBottom="150dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp">

                        <TextView
                            android:layout_width="324dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/round_blue_text"
                            android:ems="10"
                            android:fontFamily="@font/arbutus"
                            android:gravity="center"
                            android:maxLines="2"
                            android:padding="10dp"
                            android:text="SELF-CARE ISN’T SELFISH"
                            android:textColor="#5142B2"
                            android:textSize="15dp"/>

                        <TextView
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:text="@string/health_1_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_1_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_sub_1"
                            android:fontFamily="@font/roboto_bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_1"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_2"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_3"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_4"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_5"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_6"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_7"
                            android:fontFamily="@font/roboto" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_sub_2"
                            android:fontFamily="@font/roboto_bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_8"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_9"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_10"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_11"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_12"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_13"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_bullet_14"
                            android:fontFamily="@font/roboto" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_2_head"
                            android:fontFamily="@font/roboto"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_2_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_3_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_3_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_4_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_4_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_5_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/desc_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_5_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_6_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_6_body"
                            android:fontFamily="@font/roboto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/health_7_head"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="18sp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:text="@string/health_7_body"
                            android:fontFamily="@font/roboto" />


                    </LinearLayout>

                </ScrollView>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_blue_text"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:gravity="center"
            android:maxLines="2"
            android:padding="10dp"
            android:text="MENTAL HEALTH"
            android:textColor="#5142B2"
            android:textSize="20sp"/>
    </RelativeLayout>
</LinearLayout>